// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Html Default 1`] = `
<View>
  <View
    style={Object {}}
  >
    <Text
      style={Object {}}
    >
      <Text
        selectable={false}
        style={
          Array [
            Object {},
            Object {},
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#14171A",
              "fontSize": 20,
            }
          }
        >
              Les deux adverbes ont
        </Text>
      </Text>
      <Text
        selectable={false}
        style={
          Array [
            Object {
              "textDecorationLine": "line-through",
            },
            Object {},
            Object {},
          ]
        }
      >
        <Text
          selectable={false}
          style={
            Array [
              Object {},
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#14171A",
                "fontSize": 20,
                "textDecorationLine": "line-through",
              }
            }
          >
            une terminaison
          </Text>
        </Text>
      </Text>
      <Text
        selectable={false}
        style={
          Array [
            Object {},
            Object {},
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#14171A",
              "fontSize": 20,
            }
          }
        >
           qui se 
        </Text>
      </Text>
      <Text
        selectable={false}
        style={
          Array [
            Object {
              "textDecorationLine": "underline",
            },
            Object {},
            Object {},
          ]
        }
      >
        <Text
          selectable={false}
          style={
            Array [
              Object {},
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#14171A",
                "fontSize": 20,
                "textDecorationLine": "underline",
              }
            }
          >
            prononce "ament"
          </Text>
        </Text>
      </Text>
      <Text
        selectable={false}
        style={
          Array [
            Object {},
            Object {},
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#14171A",
              "fontSize": 20,
            }
          }
        >
          , mais leur orthographe diffère. On écrit ainsi :    
        </Text>
      </Text>
      <Text
        style={
          Object {
            "flex": 1,
            "height": 16.8,
          }
        }
      >
        

      </Text>
      <Text
        selectable={false}
        style={
          Array [
            Object {},
            Object {},
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#14171A",
              "fontSize": 20,
            }
          }
        >
          – 
        </Text>
      </Text>
      <Text
        selectable={false}
        style={
          Array [
            Object {
              "fontStyle": "italic",
            },
            Object {},
            Object {},
          ]
        }
      >
        <Text
          style={Object {}}
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 20,
                  "fontStyle": "italic",
                }
              }
            >
              vaill
            </Text>
          </Text>
          <Text
            style={
              Object {
                "color": "blue",
              }
            }
          >
            <Text
              selectable={false}
              style={
                Array [
                  Object {},
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#14171A",
                    "fontSize": 20,
                    "fontStyle": "italic",
                  }
                }
              >
                a
              </Text>
            </Text>
          </Text>
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 20,
                  "fontStyle": "italic",
                }
              }
            >
              mment
            </Text>
          </Text>
        </Text>
      </Text>
      <Text
        selectable={false}
        style={
          Array [
            Object {},
            Object {},
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#14171A",
              "fontSize": 20,
            }
          }
        >
          , parce que l'adverbe est formé à partir d’un 
        </Text>
      </Text>
      <Text
        selectable={false}
        style={
          Array [
            Object {
              "fontWeight": "500",
            },
            Object {},
            Object {},
          ]
        }
      >
        <Text
          style={Object {}}
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 20,
                  "fontWeight": "500",
                }
              }
            >
              adjectif en 
            </Text>
          </Text>
          <Text
            selectable={false}
            style={
              Array [
                Object {
                  "fontStyle": "italic",
                },
                Object {},
                Object {},
              ]
            }
          >
            <Text
              selectable={false}
              style={
                Array [
                  Object {},
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#14171A",
                    "fontSize": 20,
                    "fontStyle": "italic",
                    "fontWeight": "500",
                  }
                }
              >
                -ant
              </Text>
            </Text>
          </Text>
        </Text>
      </Text>
      <Text
        selectable={false}
        style={
          Array [
            Object {},
            Object {},
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#14171A",
              "fontSize": 20,
            }
          }
        >
           (
        </Text>
      </Text>
      <Text
        selectable={false}
        style={
          Array [
            Object {
              "fontStyle": "italic",
            },
            Object {},
            Object {},
          ]
        }
      >
        <Text
          style={Object {}}
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 20,
                  "fontStyle": "italic",
                }
              }
            >
              vaill
            </Text>
          </Text>
          <Text
            style={
              Object {
                "color": "blue",
              }
            }
          >
            <Text
              selectable={false}
              style={
                Array [
                  Object {},
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#14171A",
                    "fontSize": 20,
                    "fontStyle": "italic",
                  }
                }
              >
                a
              </Text>
            </Text>
          </Text>
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 20,
                  "fontStyle": "italic",
                }
              }
            >
              nt
            </Text>
          </Text>
        </Text>
      </Text>
      <Text
        selectable={false}
        style={
          Array [
            Object {},
            Object {},
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#14171A",
              "fontSize": 20,
            }
          }
        >
          ) ;    
        </Text>
      </Text>
      <Text
        style={
          Object {
            "flex": 1,
            "height": 16.8,
          }
        }
      >
        

      </Text>
      <Text
        selectable={false}
        style={
          Array [
            Object {},
            Object {},
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#14171A",
              "fontSize": 20,
            }
          }
        >
          – 
        </Text>
      </Text>
      <Text
        selectable={false}
        style={
          Array [
            Object {
              "fontStyle": "italic",
            },
            Object {},
            Object {},
          ]
        }
      >
        <Text
          style={Object {}}
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 20,
                  "fontStyle": "italic",
                }
              }
            >
              incid
            </Text>
          </Text>
          <Text
            style={
              Object {
                "color": "blue",
              }
            }
          >
            <Text
              selectable={false}
              style={
                Array [
                  Object {},
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#14171A",
                    "fontSize": 20,
                    "fontStyle": "italic",
                  }
                }
              >
                e
              </Text>
            </Text>
          </Text>
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 20,
                  "fontStyle": "italic",
                }
              }
            >
              mment
            </Text>
          </Text>
        </Text>
      </Text>
      <Text
        selectable={false}
        style={
          Array [
            Object {},
            Object {},
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#14171A",
              "fontSize": 20,
            }
          }
        >
          , parce que l'adverbe est formé à partir d’un 
        </Text>
      </Text>
      <Text
        selectable={false}
        style={
          Array [
            Object {
              "fontWeight": "500",
            },
            Object {},
            Object {},
          ]
        }
      >
        <Text
          style={Object {}}
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 20,
                  "fontWeight": "500",
                }
              }
            >
              adjectif en 
            </Text>
          </Text>
          <Text
            selectable={false}
            style={
              Array [
                Object {
                  "fontStyle": "italic",
                },
                Object {},
                Object {},
              ]
            }
          >
            <Text
              selectable={false}
              style={
                Array [
                  Object {},
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#14171A",
                    "fontSize": 20,
                    "fontStyle": "italic",
                    "fontWeight": "500",
                  }
                }
              >
                -ent
              </Text>
            </Text>
          </Text>
        </Text>
      </Text>
      <Text
        selectable={false}
        style={
          Array [
            Object {},
            Object {},
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#14171A",
              "fontSize": 20,
            }
          }
        >
           (
        </Text>
      </Text>
      <Text
        selectable={false}
        style={
          Array [
            Object {
              "fontStyle": "italic",
            },
            Object {},
            Object {},
          ]
        }
      >
        <Text
          style={Object {}}
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 20,
                  "fontStyle": "italic",
                }
              }
            >
              incid
            </Text>
          </Text>
          <Text
            style={
              Object {
                "color": "blue",
              }
            }
          >
            <Text
              selectable={false}
              style={
                Array [
                  Object {},
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#14171A",
                    "fontSize": 20,
                    "fontStyle": "italic",
                  }
                }
              >
                e
              </Text>
            </Text>
          </Text>
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 20,
                  "fontStyle": "italic",
                }
              }
            >
              nt
            </Text>
          </Text>
        </Text>
      </Text>
      <Text
        selectable={false}
        style={
          Array [
            Object {},
            Object {},
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#14171A",
              "fontSize": 20,
            }
          }
        >
          ).
        </Text>
      </Text>
    </Text>
  </View>
</View>
`;

exports[`Storyshots Html WithImage 1`] = `
<View>
  <View
    style={Object {}}
  >
    <View
      style={
        Array [
          Object {},
          Object {},
        ]
      }
    >
      <Image
        source={
          Object {
            "uri": "https://static.coorpacademy.com/content/enjoytesting/raw/Anim_Etoile_1.gif",
          }
        }
        style={
          Array [
            Array [
              Object {},
            ],
            Object {
              "height": 100,
              "resizeMode": "cover",
              "width": 100,
            },
          ]
        }
      />
    </View>
    <Text
      style={Object {}}
    >
      <Text
        selectable={false}
        style={
          Array [
            Object {},
            Object {},
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#14171A",
              "fontSize": 20,
            }
          }
        >
                  On this platform, you earn 4 stars per right answer.        If you successfully complete this level, the stars you’ve accumulated so far will be added to your score and you will rise in the ranks!        Let’s do it! Good luck on your last question, this is a tough one!      
        </Text>
      </Text>
    </Text>
  </View>
</View>
`;
